Addressed some comments, fixed single quotes, className, spacing

--- a/app/static/css/company_news.css
+++ b/app/static/css/company_news.css
@@ -3,25 +3,25 @@
 }
 
 .news-list {
-	height:100%;
-	overflow:scroll;
-	padding-top:10px;
-	margin-bottom:10px;
+	height: 100%;
+	overflow: scroll;
+	padding-top: 10px;
+	margin-bottom: 10px;
 }
 
 .news-panel-heading {
-	color:#000000;
-	font-weight:bold;
-	font-size:14px;
+	color: #212121;
+	font-weight: bold;
+	font-size: 14px;
 }
 
 .news-panel-description {
-	font-size:12px;
-	margin-top:10px;
+	font-size: 12px;
+	margin-top: 10px;
 }
 
 .news-panel-date {
-	color: #000000;
-	font-size:12px;
-	margin-top:10px;
+	color:  #000000;
+	font-size: 12px;
+	margin-top: 10px;
 }
